--- a/.air.toml
+++ b/.air.toml
@@ -5,24 +5,23 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = "./tmp/main"
-  pre_cmd = ["templ generate" ./]
-  cmd = "go build -o ./tmp/main ./cmd/server"
+  pre_cmd = ["templ generate ./..."]
+  cmd = "go build -o ./tmp/main ./cmd/server/."
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test\\.go", ".*_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
-  full_bin = ""
-  include_dir = []
+  # full_bin = ""
+  # include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html", "templ"]
-  include_file = []
+  # include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
-  poll = false
-  poll_interval = 0
-  post_cmd = []
-  pre_cmd = []
+  # poll = false
+  # poll_interval = 0
+  # post_cmd = []
   rerun = false
   rerun_delay = 500
   send_interrupt = false
